--- a/control
+++ b/control
@@ -2,7 +2,7 @@ Package: com.lixingchi.spoofbundleid
 Name: SpoofBundleId
 Version: 0.0.1
 Architecture: iphoneos-arm64
-Description: Spoof the bundle ID. CHANGE THE FOLLOWING: EXECUTABLE_NAME, REAL_BUNDLE_ID AND ORIGINAL_BUNDLE_ID. Modify `spoofCount > -1` to limit the number of spoofs. Side effects: Apps MAY not be able to request permissions properly.
+Description: Spoof the bundle ID.
 Maintainer: Xingchi Li
 Author: Xingchi Li
 Section: Tweaks
